# NNAD-Interface

./: .gitignore  EXECUTE_rand  InputCard.yaml  Makefile  README.md  grids_avg  grids_avg.cc  grids_avg.d  main  main.cc  main.d  test_Ag  test_Ag.cc  test_Ag.d
Legendre/: CMakeLists.txt  README.md  update_and_run.sh
Legendre/run/: main.cc
Legendre/src/: AutoDiffCostFunction.cc  CMakeLists.txt  NumericCostFunction.cc
PDFs/: .gitignore  CMakeLists.txt  README.md
PDFs/Plotting/: .gitignore  chi2.py  data.py  data_vs_theory.py  fit  pdfs.py
PDFs/Plotting/root_scripts/: chi2Hist.C  meth.C  preproc.C
PDFs/Plotting/scripts/Adep_allx/: gluon_g.eps  gluon_ig.eps  gluon_log_g.eps  gluon_log_ig.eps  low-x_Adep.gp  low-x_Adep3.gp
PDFs/Plotting/scripts/backup/: SameCanvas.gp  benchmark_JK.gp  ceres.gp  ceresVStf.gp  ceres_avg_reps.gp  ceres_errors.gp  ceres_reps_68cl.gp  ceres_reps_sigma.gp  ceres_sigma.gp  chi2_perrep.gp  correlation.gp  lhapdf.gp  lhapdf_ratio.gp  low-x.gp  ratio_comparison.gp  ratio_tensorflow.gp
PDFs/Plotting/scripts/fit/: ceres_reps.gp  ceres_reps_2fl.gp  ratio_reps_2fl.gp
PDFs/Plotting/scripts/originalScript/: ALICE.gp
PDFs/Plotting/scripts/replica/: chi2.gp  iterations.gp  kinematics.gp
PDFs/cards/: InputCard.yaml
PDFs/inc/: AnalyticCostFunction.h  Compute.h  PDFs.h  Timer.h  rosetta.h
PDFs/run/: CMakeLists.txt  main.cc
PDFs/scripts/: Makefile  SetupPlotting  dump_reps  test_Ag  test_Ag.cc
PDFs/src/: AnalyticCostFunction.cc  AutoDiffCostFunction.cc  CMakeLists.txt  Compute.cc  PDFs.cc
Plotting/: replica
Plotting/nNNPDF1.0_grids/: nNNPDF10_nlo_as_0118_Cu64_grids_corr.eps
Plotting/root_scripts/: plot.C
Plotting/scripts/Adep_allx/: low-x_Adep2.gp
Plotting/scripts/backup/: collaboration_meeting_4feb2019.gp  final_low-x_Adep.gp
Plotting/scripts/fit/: ceres_reps.gp  ceres_reps_2fl.gp  ratio_reps_2fl.gp  relative_uncertainty_2fl.gp
Plotting/scripts/replica/: ceres_2fl.gp
Plotting/tensorflow/backup/: A12.txt  A4.txt  A56.txt
PlottingScripts/: F2p_dataCT0.py  F2p_theory_vs_dataCT0.py  P10_fit_25arch_analytic_1kiteration.py  P10_time.py  chi2_PDFs.py  pdfs_analytic.py  produce_all  time_combine.py
PlottingScripts/data/PDF_fits/15.1.2020-23.29.58/: InputCard.yaml
PlottingScripts/data/output1/: BestTimes.pickle
PlottingScripts/data/output2/: BestTimes.pickle
PlottingScripts/data/output3/: BestTimes.pickle
PlottingScripts/data/output4/: BestTimes.pickle
PlottingScripts/data/outputs_100pts/: InputCard.yaml
PlottingScripts/data/outputs_100pts/output1/: BestTimes.pickle
PlottingScripts/data/outputs_100pts/output2/: BestTimes.pickle
PlottingScripts/data/outputs_100pts/output3/: BestTimes.pickle
PlottingScripts/data/outputs_100pts/output4/: BestTimes.pickle
inc/: AnalyticCostFunction.h  AutoDiffCostFunction.h  Compute.h  PDFs.h  pMatrix.h
results/1.12.2019-1.7.48/: InputCard.yaml
results/1.12.2019-10.47.57/: InputCard.yaml
results/11.6.2019-23.37.57/: InputCard.yaml
results/11.6.2019-23.54.30/: InputCard.yaml
run/: main.cc
scripts/: EXECUTE_rand  Makefile  grids_avg  grids_avg.cc
src/: .gitignore  AnalyticCostFunction.d  AutoDiffCostFunction.d  Compute.cc  Compute.d  FeedForwardNN.cc  FeedForwardNN.d  Matrix.cc  Matrix.d  NumericCostFunction.d  PDFs.cc  PDFs.d  Utilities.d  pMatrix.cc  pMatrix.d
